Add sign up page

--- a/sample/src/main/resources/templates/staticPages/home.html
+++ b/sample/src/main/resources/templates/staticPages/home.html
@@ -13,7 +13,7 @@
                 <a href="https://projects.spring.io/spring-boot/">Spring Boot</a>
                 sample application.
             </h2>
-            <a class="btn btn-lg btn-primary" href="">Sign up now!</a>
+            <a class="btn btn-lg btn-primary" th:href="@{/signup}">Sign up now!</a>
         </div>
         <img id="spring-logo" th:src="@{/img/spring.png}" />
     </div>
