--- a/sample/src/main/resources/templates/layout/header.html
+++ b/sample/src/main/resources/templates/layout/header.html
@@ -11,6 +11,8 @@
                 <ul class="navbar-nav navbar-expand-sm">
                     <li><a class="header-item" th:href="@{/}">Home</a></li>
                     <li><a class="header-item" th:href="@{/help}">Help</a></li>
+                    <li><a class="header-item" th:href="@{/login}">Log in</a></li>
+                    <li><a class="header-item" th:href="@{/logout}">Log out</a></li>
                 </ul>
             </nav>
         </div>
