--- a/sample/src/main/resources/templates/user/signUp.html
+++ b/sample/src/main/resources/templates/user/signUp.html
@@ -10,10 +10,13 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <form method="post" action="/signup" th:Object="${formModel}">
-                    <label for="name">Name</label>
-                    <input type="text" name="name"/>
+                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+                    <label for="username">Username</label>
+                    <input type="text" name="username"/>
                     <label for="email">Email</label>
                     <input type="text" name="email"/>
+                    <label for="password">Password</label>
+                    <input type="text" name="password"/>
                     <input type="submit" class="btn btn-primary" value="Create my account"/>
                 </form>
             </div>
@@ -22,7 +25,7 @@
                 <tr><td>ID</td><td>Name</td><td>Email</td></tr>
                 <tr th:each="user : ${users}">
                     <td th:text="${user.id}">ID</td>
-                    <td th:text="${user.name}">Name</td>
+                    <td th:text="${user.username}">Name</td>
                     <td th:text="${user.email}">Email</td>
                 </tr>
             </table>
