--- a/sample/src/main/resources/templates/user/signUp.html
+++ b/sample/src/main/resources/templates/user/signUp.html
@@ -27,6 +27,7 @@
                     <td th:text="${user.id}">ID</td>
                     <td th:text="${user.username}">Name</td>
                     <td th:text="${user.email}">Email</td>
+                    <td th:text="${user.password}">Email</td>
                 </tr>
             </table>
         </div>
