--- a/sample/src/main/resources/templates/user/signUp.html
+++ b/sample/src/main/resources/templates/user/signUp.html
@@ -17,6 +17,8 @@
                     <input type="text" name="email"/>
                     <label for="password">Password</label>
                     <input type="text" name="password"/>
+                    <label for="passwordConfirmation">Confirmation</label>
+                    <input type="text" name="passwordConfirmation"/>
                     <input type="submit" class="btn btn-primary" value="Create my account"/>
                 </form>
             </div>
