--- a/sample/src/main/resources/templates/user/signUp.html
+++ b/sample/src/main/resources/templates/user/signUp.html
@@ -16,9 +16,9 @@
                     <label for="email">Email</label>
                     <input type="text" name="email"/>
                     <label for="password">Password</label>
-                    <input type="text" name="password"/>
+                    <input type="password" name="password"/>
                     <label for="passwordConfirmation">Confirmation</label>
-                    <input type="text" name="passwordConfirmation"/>
+                    <input type="password" name="passwordConfirmation"/>
                     <input type="submit" class="btn btn-primary" value="Create my account"/>
                 </form>
             </div>
