--- a/sample/src/main/resources/templates/session/login.html
+++ b/sample/src/main/resources/templates/session/login.html
@@ -8,12 +8,12 @@
     <div layout:fragment="content">
         <h1>Log in</h1>
         <div class="row">
-            <div class="col-md-6 col-md-offset-3">
+            <div class="col-md-6 offset-md-3">
                 <form method="post" th:action="@{/login}">
                     <label for="username">Name</label>
                     <input type="text" name="username"/>
                     <label for="password">Password</label>
-                    <input type="text" name="password"/>
+                    <input type="password" name="password"/>
                     <input type="submit" class="btn btn-primary" value="Sign In"/>
                 </form>
                 <p>New user? <a th:href="@{/signup}">Sing up now!</a></p>
