--- a/sample/src/main/resources/templates/user/signUp.html
+++ b/sample/src/main/resources/templates/user/signUp.html
@@ -8,7 +8,7 @@
     <div layout:fragment="content">
         <h1>Sign Up</h1>
         <div class="row">
-            <div class="col-md-6 col-md-offset-3">
+            <div class="col-md-6 offset-md-3">
                 <form method="post" action="/signup" th:Object="${formModel}">
                     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                     <label for="username">Username</label>
@@ -22,16 +22,6 @@
                     <input type="submit" class="btn btn-primary" value="Create my account"/>
                 </form>
             </div>
-
-            <table><!-- test -->
-                <tr><td>ID</td><td>Name</td><td>Email</td></tr>
-                <tr th:each="user : ${users}">
-                    <td th:text="${user.id}">ID</td>
-                    <td th:text="${user.username}">Name</td>
-                    <td th:text="${user.email}">Email</td>
-                    <td th:text="${user.password}">Email</td>
-                </tr>
-            </table>
         </div>
     </div>
 
