Add error messages above sign up form

--- a/sample/src/main/resources/templates/user/signUp.html
+++ b/sample/src/main/resources/templates/user/signUp.html
@@ -9,7 +9,10 @@
         <h1>Sign Up</h1>
         <div class="row">
             <div class="col-md-6 offset-md-3">
-                <form method="post" action="/signup" th:Object="${formModel}">
+                <form method="post" action="/signup" th:object="${formModel}">
+                    <ul>
+                        <li th:each="error : ${#fields.detailedErrors()}" th:text="${error}"></li>
+                    </ul>
                     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                     <label for="username">Username</label>
                     <input type="text" name="username"/>
