Add error messages and success flash when sign up

--- a/sample/src/main/resources/static/css/application.css
+++ b/sample/src/main/resources/static/css/application.css
@@ -103,6 +103,10 @@ form label {
     font-weight: bold;
 }
 
+.err-msg {
+	color: red;
+}
+
 /* sidebar */
 aside section.user_info {
     margin-top: 20px;
