--- a/sample/src/main/resources/templates/layout/layout.html
+++ b/sample/src/main/resources/templates/layout/layout.html
@@ -15,6 +15,7 @@
 
 <body>
     <div class="container">
+        <div th:if="${flash}" th:text="${flash}" class="alert alert-success">success</div>
         <div layout:replace="layout/header::header"></div>
         <div layout:fragment="content"></div>
         <div layout:replace="layout/footer::footer"></div>
