--- a/sample/src/main/resources/templates/user/signUp.html
+++ b/sample/src/main/resources/templates/user/signUp.html
@@ -9,7 +9,7 @@
         <h1>Sign Up</h1>
         <div class="row">
             <div class="col-md-6 offset-md-3">
-                <form method="post" action="/signup" th:object="${formModel}">
+                <form method="post" action="/signup" th:object="${formDto}">
                     <div th:if="${#fields.hasAnyErrors()}" class="alert alert-danger">
                         <span th:text="'The form contains ' + ${#fields.errors().size()}"></span>
                         <span th:if="${#fields.errors().size()} > 1"> erros.</span>
