--- a/sample/src/main/resources/templates/layout/header.html
+++ b/sample/src/main/resources/templates/layout/header.html
@@ -13,6 +13,7 @@
           <ul class="navbar-nav mr-auto">
             <li><a class="nav-link" th:href="@{/}">Home</a></li>
             <li><a class="nav-link" th:href="@{/help}">Help</a></li>
+            <li sec:authorize="!isAuthenticated()"><a class="nav-link" th:href="@{/login}">Log in</a></li>
             <th:block sec:authorize="isAuthenticated()">
               <li><a class="nav-link" href="#">Users</a></li>
               <li class="dropdown">
