--- a/sample/src/main/resources/static/css/application.css
+++ b/sample/src/main/resources/static/css/application.css
@@ -80,6 +80,12 @@ footer li {
   width: 20%;
 }
 
+.gravatar {
+  float: left;
+  margin-right: 10px;
+  padding-left: 15px;
+}
+
 /* forms */
 form input {
   border: 1px solid #bbb;
