Change login username to email

--- a/sample/src/main/resources/templates/user/show.html
+++ b/sample/src/main/resources/templates/user/show.html
@@ -11,7 +11,7 @@
             <section class="user_info">
               <h1 th:inline="text">
                 <img th:src="${#userHelper.gravatarFor(user)}" class="gravatar"/>
-                [[${user.username}]]
+                [[${user.name}]]
               </h1>
             </section>
           </aside>
