--- a/sample/src/main/resources/templates/user/signUp.html
+++ b/sample/src/main/resources/templates/user/signUp.html
@@ -19,8 +19,8 @@
                         <li th:each="error : ${#fields.detailedErrors()}" th:text="${error}" class="err-msg"></li>
                     </ul>
                     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-                    <label for="username">Username</label>
-                    <input type="text" name="username" th:field="*{username}"/>
+                    <label for="name">Name</label>
+                    <input type="text" name="name" th:field="*{name}"/>
                     <label for="email">Email</label>
                     <input type="text" name="email" th:field="*{email}"/>
                     <label for="password">Password</label>
