--- a/sample/src/main/resources/templates/session/login.html
+++ b/sample/src/main/resources/templates/session/login.html
@@ -10,8 +10,8 @@
         <div class="row">
             <div class="col-md-6 offset-md-3">
                 <form method="post" th:action="@{/login}">
-                    <label for="username">Name</label>
-                    <input type="text" name="username"/>
+                    <label for="email">Email</label>
+                    <input type="text" name="email"/>
                     <label for="password">Password</label>
                     <input type="password" name="password"/>
                     <input type="submit" class="btn btn-primary" value="Sign In"/>
