Add remember me(in memory, insecure)

--- a/sample/src/main/resources/templates/session/login.html
+++ b/sample/src/main/resources/templates/session/login.html
@@ -14,6 +14,10 @@
                     <input type="text" name="email"/>
                     <label for="password">Password</label>
                     <input type="password" name="password"/>
+                    <label>
+                        <input type="checkbox" name="remember-me" class="checkbox"/>
+                        <span>Remember me on this computer</span>
+                    </label>
                     <input type="submit" class="btn btn-primary" value="Sign In"/>
                 </form>
                 <p>New user? <a th:href="@{/signup}">Sing up now!</a></p>
