--- a/sample/src/main/resources/static/css/application.css
+++ b/sample/src/main/resources/static/css/application.css
@@ -99,6 +99,15 @@ form label {
   font-weight: bold;
 }
 
+.checkbox {
+  width: 20px;
+}
+
+label span {
+  font-weight: initial;
+
+}
+
 .err-msg {
   color: red;
 }
