--- a/sample/src/main/resources/templates/layout/header.html
+++ b/sample/src/main/resources/templates/layout/header.html
@@ -20,7 +20,7 @@
                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Account<b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" th:href="@{'/user/' + ${#authentication.principal.id}}">Profile</a></li>
-                  <li><a class="dropdown-item" href="#">Settings</a></li>
+                  <li><a class="dropdown-item" th:href="@{'/user/' + ${#authentication.principal.id}} + '/edit'">Settings</a></li>
                   <li class="dropdown-divider"></li>
                   <li><a class="dropdown-item" th:href="@{/logout}">Log out</a></li>
                 </ul>
