--- a/sample/src/main/resources/templates/user/edit.html
+++ b/sample/src/main/resources/templates/user/edit.html
@@ -9,26 +9,7 @@
         <h1>Update your profile</h1>
         <div class="row">
             <div class="col-md-6 offset-md-3">
-                <form method="post" th:action="@{/user/} + ${user.id}" th:object="${formDto}"> <!-- TODO  Commonize-->
-                    <div th:if="${#fields.hasAnyErrors()}" class="alert alert-danger">
-                        <span th:text="'The form contains ' + ${#fields.errors().size()}"></span>
-                        <span th:if="${#fields.errors().size()} > 1"> erros.</span>
-                        <span th:if="${#fields.errors().size()} == 1"> error.</span>
-                    </div>
-                    <ul th:if="${#fields.hasAnyErrors()}">
-                        <li th:each="error : ${#fields.detailedErrors()}" th:text="${error}" class="err-msg"></li>
-                    </ul>
-                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-                    <label for="name">Name</label>
-                    <input type="text" name="name" th:field="*{name}"/>
-                    <label for="email">Email</label>
-                    <input type="text" name="email" th:field="*{email}"/>
-                    <label for="password">Password</label>
-                    <input type="password" name="password" th:field="*{password}"/>
-                    <label for="passwordConfirmation">Confirmation</label>
-                    <input type="password" name="passwordConfirmation" th:field="*{passwordConfirmation}"/>
-                    <input type="submit" class="btn btn-primary" value="Save Changes"/> <!-- TODO Helper-->
-                </form>
+                <div layout:replace="user/form::form"></div>
                 <div class="gravatar_edit">
                     <img th:src="${#userHelper.gravatarFor(user)}" class="gravatar gravatar_edit_img"/>
                     <a href="http://gravatar.com/emails" target="_blank" rel="noopener">change</a>
