--- a/sample/src/main/resources/templates/layout/header.html
+++ b/sample/src/main/resources/templates/layout/header.html
@@ -15,7 +15,7 @@
             <li><a class="nav-link" th:href="@{/help}">Help</a></li>
             <li sec:authorize="!isAuthenticated()"><a class="nav-link" th:href="@{/login}">Log in</a></li>
             <th:block sec:authorize="isAuthenticated()">
-              <li><a class="nav-link" href="#">Users</a></li>
+              <li><a class="nav-link" th:href="@{/user}">Users</a></li>
               <li class="dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Account<b class="caret"></b></a>
                 <ul class="dropdown-menu">
