--- a/sample/src/main/resources/templates/user/show.html
+++ b/sample/src/main/resources/templates/user/show.html
@@ -10,7 +10,7 @@
           <aside class="col-mid-4">
             <section class="user_info">
               <h1 th:inline="text">
-                <img th:src="${#userHelper.gravatarFor(user)}" class="gravatar"/>
+                <img th:src="${#userHelper.gravatarFor(user, 80)}" class="gravatar"/>
                 [[${user.name}]]
               </h1>
             </section>
