--- a/sample/src/main/resources/templates/user/index.html
+++ b/sample/src/main/resources/templates/user/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-    layout:decorator="layout/layout">
+  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+  layout:decorator="layout/layout">
 
 <body>
 
-    <div layout:fragment="content">
-        <h1>All users</h1>
-        <ul class="users" th:each="user : ${users}">
-            <li>
-                <img th:src="${#userHelper.gravatarFor(user, 50)}" class="gravatar"/>
-                <a th:href="@{/user}" th:text="${user.name}"></a>
-            </li>
-        </ul>
-    </div>
+  <div layout:fragment="content">
+    <h1>All users</h1>
+    <div layout:replace="user/page::nav"></div>
+    <ul class="users" th:each="user : ${users}">
+      <li>
+        <img th:src="${#userHelper.gravatarFor(user, 50)}" class="gravatar" />
+        <a th:href="@{'/user/' + ${user.id}}" th:text="${user.name}"></a>
+      </li>
+    </ul>
+    <div layout:replace="user/page::nav"></div>
+  </div>
 
 </body>
 
