--- a/sample/src/main/resources/static/css/application.css
+++ b/sample/src/main/resources/static/css/application.css
@@ -113,7 +113,6 @@ form label {
 
 label span {
   font-weight: initial;
-
 }
 
 .err-msg {
@@ -148,4 +147,8 @@ aside section h1 {
   overflow: auto;
   padding: 10px 0;
   border-bottom: 1px solid #eaeaea;
+}
+
+.pagenation-bar {
+  margin: 30px 0;
 }
