Add user delete function

--- a/sample/src/main/resources/templates/user/index.html
+++ b/sample/src/main/resources/templates/user/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
   xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-  layout:decorator="layout/layout">
+  layout:decorator="layout/layout"
+  xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <body>
 
@@ -12,6 +13,13 @@
       <li>
         <img th:src="${#userHelper.gravatarFor(user, 50)}" class="gravatar" />
         <a th:href="@{'/user/' + ${user.id}}" th:text="${user.name}"></a>
+        <div sec:authorize="hasRole('ADMIN')" th:unless="${#authentication.principal.id} == ${user.id}"
+        style="display: inline-block;">
+          <form th:action="@{'/user/' + ${user.id}}" th:method="delete">
+            <span> | </span>
+            <a href="#" class="confirm">delete</a>
+          </form>
+        </div>
       </li>
     </ul>
     <div layout:replace="user/page::nav"></div>
